Updated navigation. Converted login and register views.

--- a/JobBoard.UI.MVC/_Archive/login.html
+++ b/JobBoard.UI.MVC/_Archive/login.html
@@ -1,4 +1,4 @@
-<!--
+﻿<!--
 Author: W3layouts
 Author URL: http://w3layouts.com
 License: Creative Commons Attribution 3.0 Unported
@@ -108,29 +108,17 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</ul>
 						</nav>
 					</div>
-					<!--/.navbar-collapse-->
+					<!--/.navbar-collapse--
 					<!--/.navbar-->
 				</div>
 			</nav>
 		</div>
 	</div>
 	<!-- banner -->
-	<div class="inner_page_agile">
-		<h3>Login</h3>
-		<p>Add Some Short Description</p>
-
-	</div>
+	
 	<!--//banner -->
 	<!--/w3_short-->
-	<div class="services-breadcrumb_w3layouts">
-		<div class="inner_breadcrumb">
-
-			<ul class="short_w3ls"_w3ls>
-				<li><a href="index.html">Home</a><span>|</span></li>
-				<li>Login</li>
-			</ul>
-		</div>
-	</div>
+	
 	<!--//w3_short-->
 	<!-- /inner_content -->
 	<div class="inner_content_info_agileits">
